harbor/HTTPRoute.harbor.k8s.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor
  namespace: harbor
spec:
  hostnames:
    - harbor.madhan.app
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab-gateway
      namespace: kube-system
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: harbor
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
